packages/editor/styles/styles.css
/* ... */
.ProseMirror div.callout > :first-child[dir="rtl"]::after {
  right: unset;
  left: 0px;
}

.ProseMirror div.callout.collapsed > :first-child::after  {
  transform: rotate(-90deg);
}

.ProseMirror div.callout.collapsed :not(:first-child)  {
  display: none;
}

.ProseMirror div.callout[data-callout-type="abstract"],
.ProseMirror div.callout[data-callout-type="tldr"],
.ProseMirror div.callout[data-callout-type="summary"],

.ProseMirror div.callout[data-callout-type="tip"],
.ProseMirror div.callout[data-callout-type="hint"],
.ProseMirror div.callout[data-callout-type="important"] {
  --callout-color: 0, 191, 188;
}

.ProseMirror div.callout[data-callout-type="info"],
.ProseMirror div.callout[data-callout-type="todo"] {
  --callout-color: 8, 109, 221;
}

.ProseMirror div.callout[data-callout-type="success"],
.ProseMirror div.callout[data-callout-type="check"],
.ProseMirror div.callout[data-callout-type="done"] {
  --callout-color: 8, 185, 78;
}

.ProseMirror div.callout[data-callout-type="help"],
.ProseMirror div.callout[data-callout-type="faq"],
.ProseMirror div.callout[data-callout-type="question"],

.ProseMirror div.callout[data-callout-type="warn"],
.ProseMirror div.callout[data-callout-type="warning"],
.ProseMirror div.callout[data-callout-type="caution"],
.ProseMirror div.callout[data-callout-type="attention"] {
  --callout-color: 236, 117, 0;
}

.ProseMirror div.callout[data-callout-type="failure"],
.ProseMirror div.callout[data-callout-type="fail"],
.ProseMirror div.callout[data-callout-type="missing"],

.ProseMirror div.callout[data-callout-type="danger"],
.ProseMirror div.callout[data-callout-type="error"],

.ProseMirror div.callout[data-callout-type="bug"] {
  --callout-color: 233, 49, 71;
}

.ProseMirror div.callout[data-callout-type="example"] {
  --callout-color: 120, 82, 238;
}

.ProseMirror div.callout[data-callout-type="quote"],
.ProseMirror div.callout[data-callout-type="cite"] {
  --callout-color: 158, 158, 158;
}


/* Highlight Diff */

ins.diffmod,
ins.mod,
ins.diffins {
  background-color: rgba(46, 160, 67, 0.4);
  text-decoration: none;
}

del.diffmod,
del.diffdel {
  background-color: rgba(248, 81, 73, 0.4);
}

del.diffdel {
  text-decoration: none;
}

.ProseMirror h1 .heading-collapse-icon,
.ProseMirror h2 .heading-collapse-icon,
.ProseMirror h3 .heading-collapse-icon,
.ProseMirror h4 .heading-collapse-icon,
.ProseMirror h5 .heading-collapse-icon,
.ProseMirror h6 .heading-collapse-icon {
  display: inline-block;
  vertical-align: middle;
  cursor: pointer;
  background-size: 18px;
  width: 18px;
  height: 18px;
  margin-inline-start: 8px;

  background-color: var(--icon);
  mask: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxZW0iIGhlaWdodD0iMWVtIiB2aWV3Qm94PSIwIDAgMjQgMjQiPjxwYXRoIGZpbGw9IiM4ODg4ODgiIGQ9Ik03LjQxIDguNThMMTIgMTMuMTdsNC41OS00LjU5TDE4IDEwbC02IDZsLTYtNmwxLjQxLTEuNDJaIi8+PC9zdmc+)
    no-repeat 50% 50%;
  mask-size: cover;

  transform: rotate(0);
  transition: transform 250ms ease, opacity 200ms ease;
  opacity: 0;
  user-select: none;
}

.ProseMirror h1 .heading-collapse-icon {
  width: 18px;
  height: 18px;
}

.ProseMirror h2 .heading-collapse-icon {
  width: 16px;
  height: 16px;
}

.ProseMirror h3 .heading-collapse-icon {
  width: 15px;
  height: 15px;
}

.ProseMirror h4 .heading-collapse-icon {
  width: 14px;
  height: 14px;
}

.ProseMirror h5 .heading-collapse-icon {
  width: 13px;
  height: 13px;
}

.ProseMirror h6 .heading-collapse-icon {
  width: 12px;
  height: 12px;
}


.ProseMirror h1[data-collapsed="true"] .heading-collapse-icon,
.ProseMirror h2[data-collapsed="true"] .heading-collapse-icon,
.ProseMirror h3[data-collapsed="true"] .heading-collapse-icon,
.ProseMirror h4[data-collapsed="true"] .heading-collapse-icon,
.ProseMirror h5[data-collapsed="true"] .heading-collapse-icon,
.ProseMirror h6[data-collapsed="true"] .heading-collapse-icon {
  transform: rotate(-90deg);
  opacity: 1;
}

.ProseMirror h1[data-collapsed="true"][dir="rtl"] .heading-collapse-icon,
.ProseMirror h2[data-collapsed="true"][dir="rtl"] .heading-collapse-icon,
.ProseMirror h3[data-collapsed="true"][dir="rtl"] .heading-collapse-icon,
.ProseMirror h4[data-collapsed="true"][dir="rtl"] .heading-collapse-icon,
.ProseMirror h5[data-collapsed="true"][dir="rtl"] .heading-collapse-icon,
.ProseMirror h6[data-collapsed="true"][dir="rtl"] .heading-collapse-icon {
  transform: rotate(90deg);
  opacity: 1;
}

.ProseMirror h1:hover .heading-collapse-icon,
.ProseMirror h2:hover .heading-collapse-icon,
.ProseMirror h3:hover .heading-collapse-icon,
.ProseMirror h4:hover .heading-collapse-icon,
.ProseMirror h5:hover .heading-collapse-icon,
.ProseMirror h6:hover .heading-collapse-icon {
  opacity: 1;
}

.ProseMirror div.callout h1 .heading-collapse-icon,
.ProseMirror div.callout h2 .heading-collapse-icon,
.ProseMirror div.callout h3 .heading-collapse-icon,
.ProseMirror div.callout h4 .heading-collapse-icon,
.ProseMirror div.callout h5 .heading-collapse-icon,
.ProseMirror div.callout h6 .heading-collapse-icon {
  display: none;
}

/* hide collapse icon when heading is empty (only contains trailing break) */
.ProseMirror h1:has(> span > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
.ProseMirror h2:has(> span > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
.ProseMirror h3:has(> span > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
.ProseMirror h4:has(> span > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
.ProseMirror h5:has(> span > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
.ProseMirror h6:has(> span > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon {
  display: none !important;
}

[data-hidden="true"] {
  display: none !important;
}

/* simplebar */
.simplebar-track {
  height: 9px !important;
}
.simplebar-content:before {
  content: "" !important;
}
.simplebar-content:after {
  content: "" !important;
}
/* ... */

